--- a/Import data.ipynb
+++ b/Import data.ipynb
@@ -153,7 +153,7 @@
     "from meteostat import Point, Daily\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#z.B. für Berlin, Jahr 2018\n",
+    "#e.g. Berlin, Year 2018\n",
     "start = datetime(2018, 1, 1)\n",
     "end = datetime(2018, 12, 31)\n",
     "berlin = Point(52.5200, 13.4050, 70)\n",
